--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
         grid-template-columns: auto auto auto auto;
         background-color: #2196F3;
         padding: 10px;
+        margin-top: 10px;
       }
       .book-item {
         background-color: rgba(255, 255, 255, 0.8);
@@ -20,9 +21,28 @@
     </style>
   </head>
   <body>
-    <h1 class="text-center">Store</h1>
+    <div class="container">
+      <div class="row">
+        <h1 class="text-center">Store</h1>
+      </div>
+      <div class="row">
+        <div class="pull-right">
+          <form class="form-inline" onPublish="App.sell(); return false">
+            <label class="sr-only" for="title">Title</label>
+            <input type="text" class="form-control mb-2 mr-sm-2" id="title" placeholder="Title">
+            <label class="sr-only" for="price">Price</label>
+            <input type="text" class="form-control mb-2 mr-sm-2" id="price" placeholder="Price">
+            <label class="sr-only" for="num-copies">NumCopies</label>
+            <input type="text" class="form-control mb-2 mr-sm-2" id="num-copies" placeholder="Number of Copies">
+            <button type="submit" class="btn btn-primary">Publish</button>
+          </form>
+        </div>
+      </div>
+      <div class="row">
+        <div class= "book-container" id="books">
+          <!-- <div class="book-item">Book Title</div> -->
+        </div>
+      </div>
+    </div>
   </body>
-  <div class= "book-container">
-    <div class="book-item" id="book"></div>
-  </div>
 </html>
