--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
         text-align: center;
       }
     </style>
+    <script>
+      var books = Document.getElementsByClassName("book-item");
+    </script>
   </head>
   <body>
     <div class="container">
@@ -27,7 +30,7 @@
       </div>
       <div class="row">
         <div class="pull-right">
-          <form class="form-inline" onPublish="App.sell(); return false">
+          <form class="form-inline" onPublish="App.publishAndSell(); return false">
             <label class="sr-only" for="title">Title</label>
             <input type="text" class="form-control mb-2 mr-sm-2" id="title" placeholder="Title">
             <label class="sr-only" for="price">Price</label>
@@ -42,6 +45,9 @@
         <div class= "book-container" id="books">
           <!-- <div class="book-item">Book Title</div> -->
         </div>
+      </div>
+      <div class="row">
+        <p id="accountAddress" class="text-center"></p>
       </div>
     </div>
   </body>
