--- a/src/index.html
+++ b/src/index.html
@@ -50,5 +50,7 @@
         <p id="accountAddress" class="text-center"></p>
       </div>
     </div>
+    
+    <script src="js/app.js"></script>
   </body>
 </html>
