--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
       </div>
       <div class="row">
         <div class="pull-right">
-          <form class="form-inline" onPublish="App.sell(); return false">
+          <form class="form-inline" onPublish="App.publishAndSell(); return false">
             <label class="sr-only" for="title">Title</label>
             <input type="text" class="form-control mb-2 mr-sm-2" id="title" placeholder="Title">
             <label class="sr-only" for="price">Price</label>
