--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
       }
     </style>
     <script>
-      var books = Document.getElementsByClassName("book-item");
+      //var books = Document.getElementsByClassName("book-item");
     </script>
   </head>
   <body>
@@ -30,7 +30,7 @@
       </div>
       <div class="row">
         <div class="pull-right">
-          <form class="form-inline" onPublish="App.publishAndSell(); return false">
+          <form class="form-inline" onSubmit="App.publishAndSell(); return false">
             <label class="sr-only" for="title">Title</label>
             <input type="text" class="form-control mb-2 mr-sm-2" id="title" placeholder="Title">
             <label class="sr-only" for="price">Price</label>
@@ -50,7 +50,13 @@
         <p id="accountAddress" class="text-center"></p>
       </div>
     </div>
-    
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/web3.min.js"></script>
+    <script src="js/truffle-contract.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
