--- a/src/library.html
+++ b/src/library.html
@@ -41,12 +41,12 @@
       }
 
       li t {
-        display: block;
-        color: white;
-        text-align: center;
-        padding: 18px 50px;
-        text-decoration: none;
-      }
+          display: block;
+          color: white;
+          text-align: center;
+          padding: 18px 50px;
+          text-decoration: none;
+        }
 
 li a:hover {
   background-color: #111;
@@ -61,20 +61,7 @@ li a:hover {
   </ul>
     <div class="container">
       <div class="row">
-        <h1 class="text-center">Store</h1>
-      </div>
-      <div class="row">
-        <div class="pull-right">
-          <form class="form-inline" onSubmit="App.publishAndSell(); return false">
-            <label class="sr-only" for="title">Title</label>
-            <input type="text" class="form-control mb-2 mr-sm-2" id="title" placeholder="Title">
-            <label class="sr-only" for="price">Price</label>
-            <input type="text" class="form-control mb-2 mr-sm-2" id="price" placeholder="Price">
-            <label class="sr-only" for="num-copies">NumCopies</label>
-            <input type="text" class="form-control mb-2 mr-sm-2" id="num-copies" placeholder="Number of Copies">
-            <button type="submit" class="btn btn-primary">Publish</button>
-          </form>
-        </div>
+        <h1 class="text-center">My Library</h1>
       </div>
       <div class="row">
         <div class="book-container" id="books">
