--- a/src/library.html
+++ b/src/library.html
@@ -64,7 +64,7 @@ li a:hover {
         <h1 class="text-center">My Library</h1>
       </div>
       <div class="row">
-        <div class="book-container" id="books">
+        <div class="book-container" id="library">
           <!-- <div class="book-item">Book Title</div> -->
         </div>
       </div>
