--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
         margin: 0;
         padding: 0;
         overflow: hidden;
-        background-color: #333;
+        background-color: #2EAAB6;
       }
 
       li {
@@ -49,7 +49,8 @@
       }
 
 li a:hover {
-  background-color: #111;
+  background-color: #1B9DAA;
+  text-decoration: none;
 }
     </style>
   </head>
@@ -61,18 +62,11 @@ li a:hover {
   </ul>
     <div class="container">
       <div class="row">
-        <h1 class="text-center">Store</h1>
+        <h1 class="text-left">All Books</h1>
       </div>
       <div class="row">
         <div class="pull-right">
-          <form class="form-inline" onSubmit="App.publishAndSell(); return false">
-            <label class="sr-only" for="title">Title</label>
-            <input type="text" class="form-control mb-2 mr-sm-2" id="title" placeholder="Title">
-            <label class="sr-only" for="price">Price</label>
-            <input type="text" class="form-control mb-2 mr-sm-2" id="price" placeholder="Price">
-            <label class="sr-only" for="num-copies">NumCopies</label>
-            <input type="text" class="form-control mb-2 mr-sm-2" id="num-copies" placeholder="Number of Copies">
-            <button type="submit" class="btn btn-primary">Publish</button>
+            <button class="btn btn-primary" onclick="window.location.href = './publish.html';">Publish</button>
           </form>
         </div>
       </div>
