--- a/src/library.html
+++ b/src/library.html
@@ -25,7 +25,7 @@
         margin: 0;
         padding: 0;
         overflow: hidden;
-        background-color: #333;
+        background-color: #2EAAB6;
       }
 
       li {
@@ -49,7 +49,7 @@
         }
 
 li a:hover {
-  background-color: #111;
+  background-color: #1B9DAA;
 }
     </style>
   </head>
