--- a/src/publish.html
+++ b/src/publish.html
@@ -98,7 +98,7 @@ li a:hover {
               </div>
             </div>
             <div class="form-row">
-              <div class="form-group col-md-2">
+              <div class="form-group col-md-3">
               <label for="price">Price</label>
               <input type="text" class="form-control mb-2 mr-sm-2" id="price">
               </div>
@@ -107,10 +107,15 @@ li a:hover {
               <input type="text" class="form-control mb-2 mr-sm-2" id="tax">
               </div>
             </div>
-            <label class="sr-only" for="num-copies">NumCopies</label>
-            <input type="text" class="form-control mb-2 mr-sm-2" id="num-copies" placeholder="Number of Copies">
-            <button type="submit" class="btn btn-primary">Publish</button>
+            <div class="form-row">
+              <div class="form-group col-md-6">
+                <label for="num-copies">Maximum Number of Copies</label>
+                <input type="text" class="form-control mb-2 mr-sm-2" id="num-copies">
+                </div>
+            </div>
+            <button type="submit" class="btn btn-primary">Create</button>
           </form>
+          <button class="btn btn-success" onclick="window.location.href = './index.html';">Cancel</button>
       </div>
     </div>
 
