--- a/src/index.html
+++ b/src/index.html
@@ -35,8 +35,9 @@
       li a {
         display: block;
         color: white;
+        font-size: 16px;
         text-align: center;
-        padding: 18px 50px;
+        padding: 16px 50px;
         text-decoration: none;
       }
 
@@ -67,7 +68,6 @@ li a:hover {
       <div class="row">
         <div class="pull-right">
             <button class="btn btn-primary" onclick="window.location.href = './publish.html';">Publish</button>
-          </form>
         </div>
       </div>
       <div class="row">
