--- a/src/publish.html
+++ b/src/publish.html
@@ -36,7 +36,8 @@
         display: block;
         color: white;
         text-align: center;
-        padding: 18px 50px;
+        font-size: 16px;
+        padding: 16px 50px;
         text-decoration: none;
       }
 
