--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <style>
       .book-container {
         display: grid;
-        grid-template-columns: auto auto auto auto;
+        grid-template-columns: auto auto auto auto auto auto auto auto;
         padding: 10px;
         margin-top: 10px;
         border-radius: 15px;
@@ -14,7 +14,6 @@
       }
       .book-item {
         background-color: rgba(255, 255, 255, 0.8);
-        border: 1px solid rgba(0, 0, 0, 0.8);
         padding: 20px;
         margin: 20px;
         font-size: 30px;
@@ -52,6 +51,7 @@
 li a:hover {
   background-color: #1B9DAA;
   text-decoration: none;
+  color: white;
 }
     </style>
   </head>
