--- a/src/publish.html
+++ b/src/publish.html
@@ -38,12 +38,16 @@
       }
 
       .tall {
-        height: 100px;
+        height: 80px;
       }
 
       input {
         margin-top: 5px;
         margin-bottom: 5px
+      }
+
+      .margin {
+        margin-bottom: 20px;
       }
 
 li a:hover {
@@ -109,6 +113,9 @@ li a:hover {
                 <label for="description">Description</label>
                 <input type="text" class="form-control tall" id="description">
               </div>
+            </div>
+            <div class="form-row">
+              <button class="btn btn-primary margin">Upload File</button>
             </div>
             <div class="form-row">
               <div class="form-group col-md-3">
