--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
         margin-right: 50px;
         margin-top: 10px;
         margin-bottom: 10px;
-        margin-left: 40px;
+        margin-left: 100px;
       }
 
       .dropdown {
@@ -66,6 +66,7 @@
         background-color: #f1f1f1;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
         z-index: 1;
+        width: 200px;
       }
 
       .dropdown a {
@@ -93,6 +94,7 @@ li a:hover {
         <a href="#">Edit Profile</a>
         <a href="#">Your Wallet</a>
         <a href="#">Settings</a>
+        <a href="#" id="accountAddress"></a>
       </div>
     </li>
   </ul>
