--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,10 @@
         text-decoration: none;
         display: block;
       }
+
+      .copy {
+        font-size: 15px;
+      }
       .show {display:block;}
 
 li a:hover {
