--- a/src/library.html
+++ b/src/library.html
@@ -126,8 +126,8 @@ li a:hover {
       </div>
       <div class="popup" id="popup">
         <form onSubmit="App.sell(); return false">
-          <label for="price">Resale Price</label>
-          <input type="text" class="form-control" id="price">
+          <label for="resale-price">Resale Price</label>
+          <input type="text" class="form-control" id="resale-price">
           <button type="submit" class="btn btn-primary">Confirm</button>
           <button class="btn btn-success">Cancel</button>
         </form>
