--- a/src/library.html
+++ b/src/library.html
@@ -129,7 +129,7 @@ li a:hover {
           <label for="resale-price">Resale Price</label>
           <input type="text" class="form-control" id="resale-price">
           <button type="submit" class="btn btn-primary">Confirm</button>
-          <button class="btn btn-success">Cancel</button>
+          <button type="button" class="btn btn-success" onclick="resell(-1, -1)">Cancel</button>
         </form>
       </div>
     </div>
