--- a/src/publish.html
+++ b/src/publish.html
@@ -134,7 +134,7 @@ li a:hover {
                 </div>
             </div>
             <button type="submit" class="btn btn-primary">Create</button>
-            <button class="btn btn-success" onclick="window.location.href = './index.html';">Cancel</button>
+            <button type="button" class="btn btn-success" onclick="window.location.href = './index.html';">Cancel</button>
           </form>
       </div>
     </div>
